--- a/index.html
+++ b/index.html
@@ -1,24 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Glyphor App</title>
-    <meta name="description" content="Glyphor Generated Project" />
-    <meta name="author" content="Glyphor" />
-
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Glyphor App" />
-    <meta property="og:description" content="Glyphor Generated Project" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://fuse.glyphor.ai" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Glyphor" />
-    <meta name="twitter:image" content="https://fuse.glyphor.ai" />
+    <title>LuxeTerra Hardscapes | Luxury Outdoor Living</title>
+    <!-- Fonts: Cormorant Garamond (Serif) and Montserrat (Sans) -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,600;1,400&family=Montserrat:wght@200;300;400;500;600&display=swap" rel="stylesheet">
   </head>
-
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
